# LISA

./: .crux_dry_run_build  .eslintrc.json  .gitignore  .markdownlint-cli2.yaml  .npmignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  CHANGELOG.md  COMMIT_ID  Makefile  README.md  SECURITY.md  VERSION  brazil.ion  cdk.json  config-base.yaml  config.yaml  conftest.py  copyright.txt  crossover.config.toml  crossover.lockfile  eslint.config.js  eslint.config.mjs  example_config.yaml  flake.nix  jest.config.js  nova-policy.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pre-commit-autofix.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_enhanced_validation.py  test_simplified_validation.py  (+2 more)
.amazon/: updatabot-config.ion
.devcontainer/: devcontainer.json  post_create_command.sh
.github/: dependabot.yml
.github/scripts/: generate-pr-description.sh
.github/workflows/: auto-pr-description.yml  code.ai-review.yml  code.deploy.demo.yml  code.deploy.dev.yml  code.draft-release-and-tag.yml  code.e2e-full-test.weekly.yml  code.end-to-end-test.nightly.yml  code.hotfix.branch.yml  code.merge.main-to-develop.yml  code.publish.yml  code.release.branch.yml  code.smoke-test.yml  codeql.yml  consolidate-dependabot.yml  dependency-review.yml  dependency-updates.yml  docs.deploy.github-pages.yml  issues.alert.yml  npm-publish-github-packages.yml  sast-comprehensive.yml  secret-scan.yml  security-gate.yml  security-scan.yml  test-and-lint.yml  vulnerability-blocking.yml
assets/: LisaChat.drawio  LisaServe-FastAPI.drawio
cypress/: .env.local.example  README.md  cypress.config.ts  cypress.e2e.config.ts  cypress.smoke.config.ts  package-lock.json  package.json  tsconfig.json
docs/api-examples/: update-hosted-mcp-server.md
ecs_model_deployer/: .npmignore  Dockerfile  package-lock.json  package.json  tsconfig.json
ecs_model_deployer/src/: cdk.json  index.ts
lambda/: Dockerfile  management_key.py  requirements.txt  test_create_model.py
lambda/api_tokens/: domain_objects.py  exception.py  handler.py  lambda_functions.py
lambda/authorizer/: lambda_functions.py
lambda/brass/: __init__.py  lambda_functions.py
lambda/chat_assistant_stacks/: __init__.py  lambda_functions.py  models.py
lambda/configuration/: lambda_functions.py
lambda/dockerimagebuilder/: __init__.py
lambda/mcp_server/: lambda_functions.py  models.py
lambda/mcp_workbench/: connection_secret_updater.py  lambda_functions.py  mcp_mocks.py  s3_event_handler.py  syntax_validator.py
lambda/metrics/: batch_failure_metric.py  batch_job_metric.py  lambda_functions.py  models.py  scheduled_metrics.py
lambda/models/: __init__.py  bedrock_auth_cleanup.py  domain_objects.py  lambda_functions.py  litellm_model_sync.py  model_api_key_cleanup.py  model_context_window_backfill.py
lambda/projects/: lambda_functions.py
lambda/prompt_templates/: lambda_functions.py  models.py
lambda/repository/: collection_access_control.py  collection_repo.py  (+23 more)
lib/: cdk.ts  configSchema.ts  iam_stack.ts  ragSchema.ts  schema.ts  stages.ts  zod2md.config-rag.ts  zod2md.config.ts  zod2md.rag.ts
lib/serve/mcp-workbench/: Dockerfile  README.md  pyproject.toml  requirements.txt  test_install.py
lib/serve/mcp-workbench/s6-overlay/s6-rc.d/mcpworkbench/: run
lib/serve/mcp-workbench/s6-overlay/services.d/mcpworkbench/: run
lib/serve/mcp-workbench/s6-overlay/services.d/s3mount/: run
lib/serve/mcp-workbench/s6-overlay/services.d/s3mount/data/: check
lib/serve/mcp-workbench/src/examples/sample_tools/: aws_operator_tools.py  aws_s3_tools.py  calculator_tool.py  text_utils.py
lib/serve/mcp-workbench/src/mcpworkbench/: __init__.py  cli.py
lib/serve/mcp-workbench/src/mcpworkbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lib/serve/mcp-workbench/src/mcpworkbench/adapters/: __init__.py  tool_adapter.py
lib/serve/mcp-workbench/src/mcpworkbench/aws/: __init__.py  aws_routes.py  identity.py  session_models.py  session_service.py  session_store.py  sts_client.py
lib/serve/mcp-workbench/src/mcpworkbench/config/: __init__.py  models.py
lib/serve/mcp-workbench/src/mcpworkbench/core/: __init__.py  annotations.py  base_tool.py  tool_discovery.py  tool_registry.py
lib/serve/mcp-workbench/src/mcpworkbench/server/: __init__.py  auth.py  mcp_server.py  middleware.py
lib/serve/mcp-workbench/tests/: __init__.py  conftest.py  test_adapters.py  test_core.py  test_integration.py  test_manual.py
lisa-sdk/: Dockerfile  LISA_v2_demo.ipynb  README.md  pyproject.toml  requirements.txt  setup.py  tutorial_01.ipynb
lisa-sdk/lisapy/: __init__.py  api.py  authentication.py  collection.py  common.py  config.py  doc.py  errors.py  langchain.py  main.py  model.py  rag.py  repository.py  session.py  types.py  utils.py
lisa-sdk/lisapy/evaluation/: __init__.py  __main__.py  base.py  bedrock_kb.py  config.py  dataset.py  lisa_api.py  metrics.py  runner.py  types.py
lisa-sdk/tests/: conftest.py  test_api.py  test_client.py  test_langchain_management_key.py  test_llm_proxy.py  test_models.py  test_rag.py
mcp_server_deployer/: TESTING_EXAMPLES.md  package.json  tsconfig.json
patches/: @langchain+openai+1.2.0.patch  @langchain+openai+1.2.11.patch  use-mcp+0.0.21.patch
scripts/: audit_dependencies.py  bootstrap.mjs  cache-tiktoken-for-offline.py  check-for-models.mjs  check-for-models.sh  config.mjs  convert-and-upload-model.sh  convert-to-safetensors.py  copy-deps.mjs  copy-deps.sh  deploy.mjs  destroy.mjs  docker-login.mjs  fast-s3-transfer.sh  gen-certs.sh  generate-baseline.mjs  generate-baseline.sh  generate-config.ts  generate-prisma-cache.py  install-python.sh  integration-env.mjs  migrate-properties.mjs  model-check.mjs  prepare-and-upload-model.sh  print_litellm_proxy_requirements.py  run-integration-tests.mjs  run-pytest.sh  verify-config.mjs  verify-config.sh
test/: README.md  __init__.py
tmp/: chat-assistant-stacks-stories.md
vector_store_deployer/: Dockerfile  esbuild.js  package-lock.json  package.json  tsconfig.json
(+1133 files in other folders)
