[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lisa-adc"
version = "1.0.0"
requires-python = ">=3.11"
description = "LISA ADC Project"
dependencies = [
    "amzn_BrassServicePythonClient==1.0"
]

[tool.hatch.build]
directory = "./build"

[tool.hatch.build.targets.wheel]
packages = ["python"]
only-include = ["src"]
sources = ["src"]
[tool.hatch.env]
requires = [ "hatch-pip-compile" ]

[tool.hatch.envs.default]
python = "3.11"
path = ".venv"

[tool.hatch.envs.default.scripts]
setup = [
    "echo noop",
]

release = [
]

[tool.hatch.envs.build-tools]
# This version states what version your build tools build with.  To change it,
# you will need to:
# * Remove the `requirements/requirements-build-tools.txt` file
# * Run `brazil-build run update` to generate a new lock file for the environment
python = "3.11"
detached = true
skip-install = true
dependencies = [
    "hatch",
    "hatch-pip-compile",
]

# PeruHatch repository and package locking plugin
[tool.hatch.env.collectors.custom]
path = ".hatch/hatch_plugin.py"

# This is necessary to use 'uv' as the resolver if this is the top-level package
# in a monorepo (which is usually the case).  Remove this if copying the
# package into a monorepo
[tool.uv.workspace]

[tool.bandit]
exclude_dirs = [
    "test",
    "scripts",
    ".venv",
    "cdk.out"
]
skips = [
    "B104",
    "B108",
    "B110",
    "B403",
    "B608"
]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
force_alphabetical_sort_within_sections = true
skip_glob = [
    "cdk.out/*"
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
disallow_incomplete_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
show_error_codes = true

[tool.ruff]
lint.ignore = ["D401"]
line-length = 120

[tool.pytest.ini_options]
addopts = "--strict-markers -vv -x"
markers = [
    "api: API tests",
    "cdk_deployed: CDK infrastructure deployed",
]
testpaths = [
    "test/python"
]
