[project]
name = "lisapy"
version = "6.2.0"
description = "A simple SDK to help you interact with LISA. LISA is an LLM hosting solution for AWS dedicated clouds or ADCs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-openai",
    "toml",
]

[tool.poetry]
name = "lisapy"
version = "6.2.0"
description = "A simple SDK to help you interact with LISA. LISA is an LLM hosting solution for AWS dedicated clouds or ADCs."
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.12.5"
langchain = "1.2.7"
langchain-core = "1.2.7"
langchain-community = "0.4.1"
langchain-openai = "1.1.7"
langchain-text-splitters = "1.1.0"
numpy = ">2.1.0"
toml = "*"

[tool.poetry.group.dev.dependencies]
boto3 = "*"
ipykernel = "^7.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers -vv -x"
markers = [
    "asyncio: Async tests",
]
testpaths = [
    "../test/sdk/"
]
