[project]
name = "lisapy"
version = "6.3.0"
description = "A simple SDK to help you interact with LISA. LISA is an LLM hosting solution for AWS dedicated clouds or ADCs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-openai",
    "toml",
]

[tool.poetry]
name = "lisapy"
version = "6.3.0"
description = "A simple SDK to help you interact with LISA. LISA is an LLM hosting solution for AWS dedicated clouds or ADCs."
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.12.5"
langchain = ">=1.2.10"
langchain-core = ">=1.2.11"
langchain-community = "0.4.1"
langchain-openai = "1.1.10"
langchain-text-splitters = "1.1.1"
langsmith = ">=0.6.3"
urllib3 = ">=2.6.3"
aiohttp = ">=3.13.3"
orjson = ">=3.11.6"
marshmallow = ">=3.26.2"
numpy = ">2.1.0"
toml = "*"

[tool.poetry.group.dev.dependencies]
boto3 = "*"
ipykernel = "^7.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "*"
responses = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers -vv -x"
markers = [
    "asyncio: Async tests",
]
testpaths = [
    "../test/sdk/"
]
