[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpworkbench"
version = "0.1.0"
description = "A dynamic host for python files used as MCP tools"
authors = [{name = "Dustin Sweigart", email = "dustinps@amazon.com"}]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "click>=8.0.0",
    "starlette>=0.28.0",
    "uvicorn>=0.23.0",
    "aioboto3==12.3.0",
    "aiobotocore==2.11.2",
    "aiohttp==3.10.11",
    "boto3==1.34.34",
    "cryptography==43.0.3",
    "gunicorn==23.0.0",
    "pydantic==2.8.2",
    "PyJWT==2.9.0",
    "requests==2.32.4",
    "fastapi==0.115.11",
    "fastapi_utils==0.7.0",
    "loguru==0.7.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "requests>=2.28.0",
    "pytest-timeout>=2.1.0",
]

[project.scripts]
mcpworkbench = "mcpworkbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
