[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpworkbench"
version = "0.1.0"
description = "A dynamic host for python files used as MCP tools"
requires-python = ">=3.13"
authors = [{name = "Dustin Sweigart", email = "dustinps@amazon.com"}]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.2",
    "click==8.3.1",
    "starlette>=0.40.0,<0.51.0",
    "uvicorn>=0.31.1,<0.39.0",
    "aioboto3==13.4.0",
    "aiobotocore==2.18.0",
    "aiohttp==3.13.3",
    "boto3==1.36.0",
    "cryptography==46.0.3",
    "gunicorn==23.0.0",
    "pydantic==2.12.5",
    "PyJWT==2.10.1",
    "requests==2.32.5",
    "fastapi==0.124.2",
    "fastapi_utils==0.8.0",
    "loguru==0.7.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "pytest-timeout>=2.1.0",
]

[project.scripts]
mcpworkbench = "mcpworkbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
